# conan-deps-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
conan_config/extensions/commands/cci/: cmd_list.py
conan_config/extensions/commands/cci/parser/: analyzer.py  ast_utils.py  (+6 more)
extensions/commands/cci/: cmd_list.py  cmd_trim_versions.py
extensions/commands/cci/parser/: analyzer.py  condition.py  dependency_extractor.py  evaluator.py  fallback.py  recipe_dependencies.py  recipe_visitor.py  utils.py
tests/: test_ast_utils.py  test_utils.py
tests/functional/: conftest.py
tests/functional/cases/cmake-dual/: test_cmake_dual.py
tests/functional/cases/conandata-prop/: test_conandata_prop.py
tests/functional/cases/cond/: test_cond.py
tests/functional/cases/host-version/: test_host_version.py
tests/functional/cases/map/: test_map.py
tests/functional/cases/min/: test_min.py
tests/functional/cases/mixed-conds/: config.yml  test_mixed_conds.py
tests/functional/cases/options-expand/: test_options_expand.py
tests/functional/cases/parser-gaps/: config.yml  test_parser_gaps.py
tests/functional/cases/property-fstring/: config.yml  test_property_fstring.py
tests/functional/cases/range-consumer/: test_range_consumer.py
tests/functional/cases/tool/: test_tool.py
tests/functional/cases/unknown-local-loader/: test_unknown_local_loader.py
tests/functional/cases/variable-requires/: test_variable_requires.py
tests/functional/cases/version-conds/: test_version_conds.py
tests/unit/: conftest.py  test_condition.py  test_utils.py
(+39 files in other folders)
