[project]
name = "conan-deps-analyzer"
version = "0.0.0"
description = "Conan 2 custom commands for CCI-style recipe dependency analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=7.0",
    "conan>=2.0",
    "ruff>=0.15.7",
    "mypy>=1.19.1",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.10"
explicit_package_bases = true
mypy_path = "extensions/commands/cci"
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["extensions/commands/cci"]
addopts = "-q"
